contrast adjust icon issue

--- a/style.css
+++ b/style.css
@@ -120,6 +120,22 @@ input:focus, textarea:focus {
     background-color: white;
 }
 
+nav,
+.scroll,
+.header {
+    opacity: 1;
+    visibility: visible;
+    transition: all 600ms 400ms; 
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 400ms;
+}
+
 /* 
 
 LANDING PAGE 
@@ -252,7 +268,7 @@ nav {
     font-weight: 700;
 }
 
-.fa-solid {
+.fa-adjust {
     font-size: 20px;
 }
 
@@ -291,10 +307,17 @@ MODAL
     flex-direction: column;
     justify-content: center;
     position: relative;
+    transition: all 300ms ease-in;
+}
+
+.modal--open .modal__about,
+.modal--open .modal__contact {
+    transform: translateX(0%);
 }
 
 .modal__about {
     background-color: rgb(245, 245, 245);
+    transform: translateX(-110%);
 }
 
 .modal__languages {
@@ -335,6 +358,7 @@ transform: scale(1);
 .modal__contact {
     background-color: #242424;
     color: white;
+    transform: translateX(110%);
 }
 
 .modal__title {
@@ -383,7 +407,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-display: flex;
+display: none;
 align-items: center;
 justify-content: center;
 z-index: -1;
@@ -402,7 +426,8 @@ padding: 28px;
 }
 
 .modal__overlay--visible {
-   z-index: 1; 
+   z-index: 1;
+   display: flex; 
 }
 
 .fa-spinner {
